<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App strings -->
    <string name="app_name">Task Timer</string>
    
    
    <!-- Menu strings -->
    <string name="menu_drawer_open">Open Drawer</string>
    <string name="menu_drawer_close">Close Drawer</string>
    <string name="menu_new_task">New Task</string>
    <string name="menu_new_group">New Group</string>
    <string name="menu_settings">Settings</string>


    <!-- Drawer strings -->
    <string-array name="drawer_main_items">
        <item>Tasks</item>
        <item>Groups</item>
        <item>Statistics</item>
    </string-array>
    
    
    <!-- Dialog strings -->
    <string name="dialog_restart_title">Restart Needed</string>
    <string name="dialog_restart_message">A complete restart of Task Timer is required for this change to fully take effect.</string>
    <string name="dialog_restart_button_now">Restart Now</string>
    <string name="dialog_restart_button_later">Restart Later</string>


    <!--  Task strings -->
    <string name="task_name">Name</string>
    <string name="task_time">Current Time</string>
    <string name="task_goal">Goal</string>
    <string name="task_indefinite">Indefinite</string>
    <string name="task_progress">Progress</string>
    <string name="task_group">Group</string>
    <string name="task_position">Position</string>
    <string name="task_description">Description</string>
    
    <string name="task_action_start">Start</string>
    <string name="task_action_pause">Pause</string>
    <string name="task_action_edit">Edit</string>
    <string name="task_action_archive">Archive</string>
    <string name="task_action_delete">Delete</string>
    
    <string name="task_new">New Task</string>
    <string name="task_add">Add Task</string>
    <string name="task_edit">Edit Task</string>
    <string name="task_save">Save Task</string>

    <string name="task_empty">No tasks</string>
    
    
    <!-- Group strings -->
    <string name="group_name">Name</string>
    <string name="group_position">Position</string>

    <string name="group_action_edit">Edit</string>
    <string name="group_action_archive">Archive</string>
    <string name="group_action_delete">Delete</string>
    
    <string name="group_new">New Group</string>
    <string name="group_add">Add Group</string>
    <string name="group_edit">Edit Group</string>
    <string name="group_save">Save Group</string>

    <string name="group_empty">No groups</string>
    
    
    <!-- Time strings -->
    <string name="time_hours">Hours</string>
    <string name="time_mins">Minutes</string>
    <string name="time_secs">Seconds</string>
    <string name="time_separator">:</string>
    
    
    <!-- Position strings -->
    <string name="position_before">Before \"%1$s\"</string>
    <string name="position_after">After \"%1$s\"</string>
    <string name="position_between">Between \"%1$s\" and \"%2$s\"</string>
    <string name="position_first">First</string>
    <string name="position_last">Last</string>
    
    
    <!-- Error strings -->
    <!-- Nothing to see here at the moment -->


    <!-- Notification strings -->
    <string name="notif_task_completed">Task goal reached</string>
    <string name="notif_task_completed_long">Task \"%s\" has reached its goal</string>
    
    
    <!-- Plurals -->
    <plurals name="plural_tasks_running">
        <item quantity="zero">No tasks running</item>
        <item quantity="one">One task running</item>
        <item quantity="other">%d tasks running</item>
    </plurals>
    <plurals name="plural_selected_count">
        <item quantity="other">%d selected</item>
    </plurals>


    <!-- Preference strings -->
    <string name="pref_generalSettings">General</string>
    <string name="pref_taskSettings">Tasks</string>
    <string name="pref_notifSettings">Notifications</string>
    <string name="pref_about">About</string>

    <string name="pref_theme">Theme</string>
    <string name="pref_theme_default">2</string>
    <string-array name="pref_theme_entries">
        <item>Dark</item>
        <item>Light</item>
        <item>Light with dark action bar</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_timeFormat">Time Format</string>
    <string name="pref_timeFormat_default">0</string>
    <string-array name="pref_timeFormat_entries">
        <item>System Default</item>
        <item>12-hour</item>
        <item>24-hour</item>
    </string-array>
    <string-array name="pref_timeFormat_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_history_title">History tracking</string>
    <string name="pref_history_default">true</string>
    <string name="pref_history_summary_on">Task history will be tracked</string>
    <string name="pref_history_summary_off">Task history won\'t be tracked</string>

    <string name="pref_overtime_title">Overtime</string>
    <string name="pref_overtime_default">false</string>
    <string name="pref_overtime_summary_on">Tasks will be able to go over their goals</string>
    <string name="pref_overtime_summary_off">Tasks won\'t be able to go over their goals</string>

    <string name="pref_autoPause_title">Automatic pausing at goal</string>
    <string name="pref_autoPause_default">true</string>
    <string name="pref_autoPause_summary_on">Tasks will be paused when their goals are reached</string>
    <string name="pref_autoPause_summary_off">Tasks won\'t be paused when their goals are reached</string>

    <string name="pref_multipleRunning_title">Multiple tasks running</string>
    <string name="pref_multipleRunning_default">true</string>
    <string name="pref_multipleRunning_summary_on">More than one task can be running at a time</string>
    <string name="pref_multipleRunning_summary_off">Only one task can be running at a time</string>

    <string name="pref_goalNotification">Goal reached notifications</string>
    <string name="pref_goalNotification_default">true</string>
    <string name="pref_goalNotification_summary_on">A notification will be made when a task reaches its goal</string>
    <string name="pref_goalNotification_summary_off">A notification will not be made when a task reaches its goal</string>

    <string name="pref_notificationSound">Notification sound</string>

    <string name="pref_aboutApp">About Task Timer</string>

    <string name="pref_playStore">Play Store item</string>
    <string name="pref_playStore_summary">View the app in the Google Play Store</string>

    <string name="pref_allApps">Other apps</string>
    <string name="pref_allApps_summary">View the other apps made by the author</string>


    <!--  View tag IDs -->
    <item type="id" name="tag_task" />
    <item type="id" name="tag_group" />

</resources>